// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c3 {
  display: table-cell;
  vertical-align: middle;
}

.c4 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c5 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c0 .c2 {
  color: #6b798e;
}

.c6 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #eaf3fd;
  border: 1px solid #cae3ff;
}

.c6 .c2 {
  color: #4683e6;
}

.c7 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fffce5;
  border: 1px solid #fff28f;
}

.c7 .c2 {
  color: #f9ce1d;
}

.c8 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fff0f0;
  border: 1px solid #fed4d4;
}

.c8 .c2 {
  color: #f44336;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c6"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c7"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c8"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
.c6.c6.c6 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c3 {
  display: table-cell;
  vertical-align: middle;
}

.c7 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c4 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c5 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c0 .c2 {
  color: #6b798e;
}

.c8 .c2 {
  color: #4683e6;
}

.c9 .c2 {
  color: #f9ce1d;
}

.c10 .c2 {
  color: #f44336;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__loading "
        type="loading"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin c6"
        type="loading"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content
    </div>
    <div
      class="c7"
    >
      <i
        class="uc-fe-icon icon__loading "
        type="loading"
      />
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="c2 uc-fe-icon icon__circle-mark2 "
        type="circle-mark2"
      />
    </span>
    <div
      class="c3"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <div
      class="c7"
    >
      <i
        class="uc-fe-icon icon__loading "
        type="loading"
      />
    </div>
    <div
      class="c4"
    >
      <i
        class="c5 uc-fe-icon icon__cross "
        type="cross"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.c23 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c25 {
  display: table-cell;
  vertical-align: middle;
}

.c22 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c22 .c24 {
  color: #6b798e;
}

.c26 .c24 {
  color: #4683e6;
}

.c27 .c24 {
  color: #f9ce1d;
}

.c28 .c24 {
  color: #f44336;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c6 {
  position: relative;
  z-index: 1;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c29 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c29:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c29:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            success
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            warning
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            undefined
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            loading
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            circle
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c22"
    >
      <span
        class="c23"
      >
        <i
          class="c24 uc-fe-icon icon__circle-mark2 "
          type="circle-mark2"
        />
      </span>
      <div
        class="c25"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
